--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -12,3 +12,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: neuroinformatics-unit/actions/publish_sphinx_docs@add-docs-workflows
+      with:
+        secret_input: ${{ secrets.GITHUB_TOKEN }}
