--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -10,6 +10,6 @@ jobs:
     name: Publish Sphinx Docs
     runs-on: ubuntu-latest
     steps:
-    - uses: neuroinformatics-unit/actions/publish_sphinx_docs@add-docs-workflows
+    - uses: neuroinformatics-unit/actions/publish_sphinx_docs@v1.2.0
       with:
         secret_input: ${{ secrets.GITHUB_TOKEN }}
