Remove codespell actions job

--- a/.github/workflows/docs_build_and_deploy.yml
+++ b/.github/workflows/docs_build_and_deploy.yml
@@ -14,20 +14,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  codespell:
-    name: Check for spelling errors
-    permissions:
-      contents: read
+  linting:
+    # scheduled workflows should not run on forks
+    if: (${{ github.event_name == 'schedule' }} && ${{ github.repository_owner == 'neuroinformatics-unit' }} && ${{ github.ref == 'refs/heads/main' }}) || (${{ github.event_name != 'schedule' }})
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Codespell
-        uses: codespell-project/actions-codespell@v2
+      - uses: neuroinformatics-unit/actions/lint@v2
 
   build_sphinx_docs:
     name: Build Sphinx Docs
-    needs: codespell
+    needs: linting
     runs-on: ubuntu-latest
     steps:
       - uses: neuroinformatics-unit/actions/build_sphinx_docs@v2
