--- a/.github/workflows/docs_build_and_deploy.yml
+++ b/.github/workflows/docs_build_and_deploy.yml
@@ -96,7 +96,7 @@ jobs:
           name: docs-${{ github.sha }}
           path: docs/build
 
-      - name: Checkout the gh-pages branch in a separate folder
+      - name: Checkout the gh-pages-test branch in a separate folder
         uses: actions/checkout@v4
         with:
           ref: gh-pages-test
@@ -105,7 +105,7 @@ jobs:
           # Download the entire history
           fetch-depth: 0
 
-      - name: Push the built HTML to gh-pages
+      - name: Push the built HTML to gh-pages-test
         run: |
           # Detect if this is a release or from the main branch
           if [[ "${{ github.event_name }}" == "release" ]]; then
@@ -151,6 +151,6 @@ jobs:
           fi
           # Make the push quiet just in case there is anything that could leak
           # sensitive information.
-          echo -e "\nPushing changes to gh-pages."
-          git push -fq origin gh-pages 2>&1 >/dev/null
+          echo -e "\nPushing changes to gh-pages-test."
+          git push -fq origin gh-pages-test 2>&1 >/dev/null
           echo -e "\nFinished uploading generated files."
