--- a/.github/workflows/docs_build_and_deploy.yml
+++ b/.github/workflows/docs_build_and_deploy.yml
@@ -137,6 +137,7 @@ jobs:
             NEW_URL="${BASE_URL}/${version}/"
 
             # Extract the current latest version entry
+            FIRST_ENTRY=$(jq '.[0]' <<< "${SWITCHER_CONTENT}")
             CURRENT_LATEST_ENTRY=$(jq '.[1]' <<< "${SWITCHER_CONTENT}")
 
             # Remove the "name" field from the current latest entry
@@ -144,11 +145,13 @@ jobs:
 
             # Create the new version entry with the "latest" tag
             NEW_ENTRY=$(jq -n --arg version "${version}" --arg url "$NEW_URL" \
-            '{version: $version, url: $url, name: "v\($version) (latest)"}')
+            '{version: $version, url: $url, name: "($version) (latest)"}')
 
-            UPDATED_SWITCHER_CONTENT=$(jq --argjson new_entry "$NEW_ENTRY" \
-            --argjson updated_current_latest_entry "$UPDATED_CURRENT_LATEST_ENTRY" \
-            '.[1] = $updated_current_latest_entry | . += [$new_entry]' <<< "$SWITCHER_CONTENT")
+            # Combine the entries in the desired order
+            UPDATED_SWITCHER_CONTENT=$(jq --argjson first_entry "$FIRST_ENTRY" \
+              --argjson new_entry "$NEW_ENTRY" \
+              --argjson updated_current_stable_entry "$UPDATED_CURRENT_STABLE_ENTRY" \
+              '[$first_entry, $new_entry, $updated_current_stable_entry] + .[2:]' <<< "$SWITCHER_CONTENT")
 
             # Write the updated content back to switcher.json
             echo "$UPDATED_SWITCHER_CONTENT" > "$SWITCHER_FILE"
