--- a/.github/workflows/docs_build_and_deploy.yml
+++ b/.github/workflows/docs_build_and_deploy.yml
@@ -134,7 +134,7 @@ jobs:
             SWITCHER_FILE="${version}/_static/switcher.json"
             SWITCHER_CONTENT=$(cat "${SWITCHER_FILE}")
             BASE_URL="$(jq -r '.[1].url|split("/")[0:3]|join("/")' $SWITCHER_FILE)"
-            NEW_URL="${BASE_URL}/stable/"
+            NEW_URL="${BASE_URL}/latest/"
             # Extract the current latest version entry
             FIRST_ENTRY=$(jq '.[0]' <<< "${SWITCHER_CONTENT}")
             CURRENT_LATEST_VERSION=$(echo $(jq '.[1].version' <<< "${SWITCHER_CONTENT}") | tr -d '"')
@@ -142,13 +142,13 @@ jobs:
             # Remove the "name" field from the current latest entry
             UPDATED_CURRENT_LATEST_ENTRY=$(jq --arg url "${BASE_URL}/${CURRENT_LATEST_VERSION}" '.[1] | .url = $url | del(.name)' <<< "$SWITCHER_CONTENT")
 
-            # Create the new version entry with the "stable" tag
-            NEW_ENTRY=$(jq -n --arg version "${version}" --arg url "$NEW_URL" --arg name "$version (stable)" \
+            # Create the new version entry with the "latest" tag
+            NEW_ENTRY=$(jq -n --arg version "${version}" --arg url "$NEW_URL" --arg name "$version (latest)" \
             '{name: $name, version: $version, url: $url}')
 
 
             # Combine the entries in the desired order
-            UPDATED_SWITCHER_CONTENT=$(jq --argjson first_entry "$FIRST_ENTRY" --argjson new_entry "$NEW_ENTRY" --argjson updated_current_stable "$UPDATED_CURRENT_LATEST_ENTRY" '[$first_entry, $new_entry, $updated_current_stable] + .[2:]' <<< "$SWITCHER_CONTENT")
+            UPDATED_SWITCHER_CONTENT=$(jq --argjson first_entry "$FIRST_ENTRY" --argjson new_entry "$NEW_ENTRY" --argjson updated_current_latest "$UPDATED_CURRENT_LATEST_ENTRY" '[$first_entry, $new_entry, $updated_current_latest] + .[2:]' <<< "$SWITCHER_CONTENT")
 
             # Write the updated content back to switcher.json
             echo "$UPDATED_SWITCHER_CONTENT" > "$SWITCHER_FILE"
